# send2Kindle

./: .env.example  README.md  pyproject.toml
send2kindle_bot/: __init__.py  bot.py  config.py  mailer.py  telegram_client.py
