[project]
name = "send2kindle"
version = "0.1.0"
description = "Telegram bot to forward documents to Kindle via SMTP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = []
